fixed aboutBio width to improve readability

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
   text-align: justify;
   margin-top: 120px;
   margin-left: 80px;
-  width: 800px;
+  width: 720px;
   font-family: "Nothing You Could Do", cursive;
 }
 
